[tool.poetry]
name = "photo_renamer"
version = "0.1.0"
description = ""
authors = ["Cédric Laudrel <dek@iono.me>"]

[tool.poetry.dependencies]
python = "^3.7"
exif = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.7"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
